--- a/src/index.css
+++ b/src/index.css
@@ -8,19 +8,22 @@
   box-sizing: border-box;
 }
 
-.acc_section {
+.acc_section,
+.time_section {
   width: 100%;
   padding-block: 80px;
 }
 
-.acc_container {
+.acc_container,
+.time_container {
   width: 100%;
   max-width: 1220px;
   margin: auto;
   padding-inline: 16px;
 }
 
-.acc_wrapper {
+.acc_wrapper,
+.time_wrapper {
   width: 100%;
   height: 100%;
   display: flex;
@@ -30,6 +33,7 @@
   gap: 24px;
 }
 
+/* Accordion */
 .accordian_ctn {
   border: 1px solid black;
   width: 100%;
@@ -55,4 +59,26 @@
 
 .accordian_body_content {
   padding: 8px 16px;
+}
+
+/* Timer */
+.time_ctn {
+  border: 1px solid #0000007b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  overflow: hidden;
+  color: #9f9f9f;
+  margin-bottom: 16px;
+}
+
+.time_ctn > div {
+  min-width: 60px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 12px 16px;
+  text-align: center;
+  color: #000000;
 }
